Logger_code_Base/force-app/main/default/objects/Log_Event__e/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>The type of the Apex exception that was logged.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>