Logger_code_Base/force-app/main/default/objects/Log_Event__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>he severity level of the log entry</description>
    <label>Level</label>
    <length>15</length>
    <type>Text</type>
</CustomField>