Logger_code_Base/force-app/main/default/objects/Log_Event__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Stack trace for standard exceptions</description>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>